chore: Add @mantine/dropzone and @mantine/charts dependencies, update ControleFinanceiro component

--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@mantine/charts": "^7.11.2",
     "@mantine/core": "7.11.2",
+    "@mantine/dropzone": "^7.11.2",
     "@mantine/hooks": "7.11.2",
+    "@tabler/icons-react": "^3.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.1.10",
